tests/fixtures/errors/missing_semicolon.cpp
// Test: missing semicolon
int main() {
    int x = 5
    return 0;
}
